# cpp_calculator

./: CMakeLists.txt
calculator/: CMakeLists.txt  basic_operations.cpp  basic_operations.hpp  calculator_class.cpp  calculator_class.hpp  dlfc_forWindows.cpp  dlfc_forWindows.hpp  expression_solver.cpp  expression_solver.hpp  main.cpp  parser.cpp  parser.hpp  plugins_usage.cpp  plugins_usage.hpp
plugins/: CMakeLists.txt  compile_lib.sh  cos.cpp  exp.cpp  sin.cpp  sqrt.cpp
